panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__initialisation__test_braced_initialisation_of_array_of_array_of_char_ptr_with_string_literal.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/initialisation/test_braced_initialisation_of_array_of_array_of_char_ptr_with_string_literal.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: array of inappropriate type `array<ptr<char const>; 1>` initialised by string literal
   ╭─[panko/tests/cases/execute/initialisation/test_braced_initialisation_of_array_of_array_of_char_ptr_with_string_literal.c:7:43]
   │
 7 │     typeof(typeof(char const*)[1]) s[] = {"hello world"};
   │            ───────────┬──────────         ──────┬──────  
   │                       │                         ╰──────── this is a character string literal, which can only initialise arrays of `char`, `unsigned char` or `signed char`
   │                       │                                  
   │                       ╰────────────────────────────────── this is an array of `ptr<char const>`
───╯

Error: array of inappropriate type `array<ptr<char const>; 1>` initialised by string literal
   ╭─[panko/tests/cases/execute/initialisation/test_braced_initialisation_of_array_of_array_of_char_ptr_with_string_literal.c:7:43]
   │
 7 │     typeof(typeof(char const*)[1]) s[] = {"hello world"};
   │            ───────────┬──────────         ──────┬──────  
   │                       │                         ╰──────── this is a character string literal, which can only initialise arrays of `char`, `unsigned char` or `signed char`
   │                       │                                  
   │                       ╰────────────────────────────────── this is an array of `ptr<char const>`
───╯

Error: array of inappropriate type `array<ptr<char const>; 1>` initialised by string literal
   ╭─[panko/tests/cases/execute/initialisation/test_braced_initialisation_of_array_of_array_of_char_ptr_with_string_literal.c:7:43]
   │
 7 │     typeof(typeof(char const*)[1]) s[] = {"hello world"};
   │            ───────────┬──────────         ──────┬──────  
   │                       │                         ╰──────── this is a character string literal, which can only initialise arrays of `char`, `unsigned char` or `signed char`
   │                       │                                  
   │                       ╰────────────────────────────────── this is an array of `ptr<char const>`
───╯

Error: array of inappropriate type `array<ptr<char const>; 1>` initialised by string literal
   ╭─[panko/tests/cases/execute/initialisation/test_braced_initialisation_of_array_of_array_of_char_ptr_with_string_literal.c:7:43]
   │
 7 │     typeof(typeof(char const*)[1]) s[] = {"hello world"};
   │            ───────────┬──────────         ──────┬──────  
   │                       │                         ╰──────── this is a character string literal, which can only initialise arrays of `char`, `unsigned char` or `signed char`
   │                       │                                  
   │                       ╰────────────────────────────────── this is an array of `ptr<char const>`
───╯
